fix spacing between description and heading

--- a/src/app/(default)/GalleryItem.module.css
+++ b/src/app/(default)/GalleryItem.module.css
@@ -11,14 +11,14 @@
   display: none;
   position: absolute;
   background-color: var(--background-translucent);
+  flex-direction: column;
 
   top: 0px;
   left: 0px;
   bottom: 0px;
   right: 0px;
 
-  justify-content: center;
-  align-items: center;
+  gap: 40px;
 
   padding: 16px;
 }
